src/test/resources/public/input/typechecking/fail/double_decl/fail03.jova
class Test{
  private int whyYouDoubleDeclMe;
  private string whyYouDoubleDeclMe;
}

class Main {

  public int main() {

    return 0;
  }

}